--- a/app/src/main/res/layout/activity_edit_text.xml
+++ b/app/src/main/res/layout/activity_edit_text.xml
@@ -37,7 +37,7 @@
         android:layout_height="40dp"
         android:layout_below="@id/et_2"
         android:layout_marginTop="40dp"
-        android:background="@drawable/bg_bt4"
+        android:background="@drawable/selector_orange"
         android:text="登录"
         android:textColor="#fffcfc"
         android:textSize="20sp"/>
