--- a/app/src/main/res/drawable/selector_orange.xml
+++ b/app/src/main/res/drawable/selector_orange.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_checked="true">
         <shape>
             <corners android:radius="5dp"/>
             <solid android:color="#d68d8d"/>
         </shape>>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_checked="false">
         <shape>
             <corners android:radius="5dp"/>
-            <solid android:color="#d1b08b"/>
+            <solid android:color="#453b30"/>
         </shape>>
     </item>
 
