--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,11 +64,11 @@
             android:textAllCaps="false" />
 
         <Button
+            android:id="@+id/btn_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="300dp"
-            android:text="Test"
-            android:textAllCaps="false" />
+            android:text="RecyclerView"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </ScrollView>
